kube/front/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: front
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: ACCOUNTS_URL
            - name: CALENDAR_URL
              value: http://calendar
            - name: COLLABORATOR_API_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: COLLABORATOR_API_URL
            - name: COLLABORATOR_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: COLLABORATOR_URL
            - name: DEFAULT_LANGUAGE
              value: en
            - name: ELASTIC_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: ELASTIC_URL
            - name: GMAIL_URL
              value: http://gmail:8088
            - name: MINIO_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: MINIO_ACCESS_KEY
            - name: MINIO_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MINIO_ENDPOINT
            - name: MINIO_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: MINIO_SECRET_KEY
            - name: MONGO_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: MONGO_URL
            - name: REKONI_URL
              valueFrom:
                configMapKeyRef:
                  name: glint-config
                  key: REKONI_URL
            - name: SERVER_PORT
              value: "8080"
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: glint-secret
                  key: SERVER_SECRET
            - name: TELEGRAM_URL
              value: http://telegram:8086
            - name: TITLE
              value: Glint Self Hosted
            - name: UPLOAD_URL
              value: /files
          image: getyoutrack/front:latest
          name: front
          ports:
            - containerPort: 8080
      restartPolicy: Always
